--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <nav>
         <a href="linebot.html">Line bot</a>
-        <a href="Website.html">Website</a>
-        <a href="ChatGPT.html">Chat</a>
+        <a href="website.html">Website</a>
+        <a href="chatgpt.html">Chat GPT</a>
     
     </nav>
         <div style="text-align: center; display: flex; justify-content: center; align-items: center; height: 80vh;">
